--- a/Todo/Views/_ViewImports.cshtml
+++ b/Todo/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using Todo
+﻿﻿@using Todo
 @using Todo.Models
+@using Todo.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
