--- a/Todo/Views/Shared/_Form.cshtml
+++ b/Todo/Views/Shared/_Form.cshtml
@@ -8,4 +8,7 @@
              <input asp-for="Todo.Name" />
              <span asp-validation-for="Todo.Name"></span>
              <input type="submit" id="form-button" value="add Todo" />
+             <input type="hidden" id="Id" name="Id" />
+             <input type="submit" class="btn btn-success" value="Salvar" onclick="submitTodo()" />
+             
 </form> 
